[package]
name = "rama-x-governor"
version = "0.1.0"
edition = "2024"
description = "Rate limiting policy for Rama using the governor crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NOOMA-42/rama-x-governor"
readme = "README.md"
keywords = ["rama", "rate-limiting", "governor", "middleware", "web"]
categories = ["web-programming", "network-programming", "asynchronous"]

[dependencies]
governor = "0.6"
tokio = { version = "1", features = ["time", "sync"] }
once_cell = "1.18"
thiserror = "1.0"
serde_json = "1.0.140"
tracing = "0.1.41"
rama-core = "0.2.0-alpha.7"
rama-http = "0.2.0-alpha.7"
rama-net = "0.2.0-alpha.7"
rama-http-backend = "0.2.0-alpha.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rama = { version = "0.2.0-alpha.6", features = ["http-full"] }

[features]
default = []
